# uoy-assessment-uploader

./: .gitignore  Pipfile  README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: actions.yml  workflow.yml
docs/: api.rst  index.rst
docs/source/: api.rst  conf.py  index.rst  modules.rst  uoy_assessment_uploader.rst  usage.rst
uoy_assessment_uploader/: __init__.py  argparse.py  argument_parser.py  constants.py  credentials.py  parser.py  requests.py  selenium.py
