[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uoy-assessment-uploader"
description = "Tool for automating submitting assessments to the University of York Computer Science department."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "jmcb", email = "joelsgp@protonmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4 ~= 4.12.2",
    "keyring ~= 24.2.0",
    "requests ~= 2.31.0",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/joelsgp/uoy-assessment-uploader"

[project.scripts]
uoy-assessment-uploader = "uoy_assessment_uploader:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.setuptools.dynamic]
version = {attr = "uoy_assessment_uploader.__version__"}
